--- a/mobile/RackApp/src/app/components/default-head/default-head.component.html
+++ b/mobile/RackApp/src/app/components/default-head/default-head.component.html
@@ -74,8 +74,8 @@
                   </ion-item>
                   <ion-item class="hiddenInput">
                     <ion-input formControlName="City_id" type="number">
-                      <span *ngIf="user.City_id && !selCityId">{{user.City_id}}</span>
-                      <span *ngIf="selCityId">{{selCityId}}</span>
+                      <!-- <span *ngIf="user.City_id && !selCityId">{{user.City_id}}</span> -->
+                      <!-- <span *ngIf="selCityId">{{selCityId}}</span> -->
                     </ion-input>
                   </ion-item>
               </ion-list>
