--- a/mobile/RackApp/src/app/components/default-head/default-head.component.html
+++ b/mobile/RackApp/src/app/components/default-head/default-head.component.html
@@ -22,23 +22,7 @@
         <ion-item (click)="openAS()" type="button" color="tertiary">Account
           <ion-icon slot="end" name="chevron-forward"></ion-icon>
         </ion-item>
-        <ion-accordion value="first" toggleIcon="chevron-forward" disabled>
-          <ion-item slot="header" color="tertiary" lines="inset">
-            <ion-label>Display</ion-label>
-          </ion-item>
-          <div slot="content">
-            <ion-list >
-              <ion-item>
-                <ion-icon slot="start" name="moon-outline"></ion-icon>
-                <ion-label>Dark mode</ion-label>
-                <ion-toggle slot="end" class="px-0 mx-0" id="themeToggle"></ion-toggle>
-              </ion-item>
-            </ion-list>
-
-
-          </div>
-        </ion-accordion>
-        <ion-accordion value="third" toggleIcon="chevron-forward-outline">
+        <ion-accordion value="second" toggleIcon="chevron-forward-outline">
           <ion-item slot="header" color="tertiary">
             <ion-label>Language & Region</ion-label>
           </ion-item>
@@ -86,6 +70,23 @@
             
           </div>
         </ion-accordion>
+        <ion-accordion value="third" toggleIcon="chevron-forward" disabled>
+          <ion-item slot="header" color="tertiary" lines="inset">
+            <ion-label>Display</ion-label>
+          </ion-item>
+          <div slot="content">
+            <ion-list >
+              <ion-item>
+                <ion-icon slot="start" name="moon-outline"></ion-icon>
+                <ion-label>Dark mode</ion-label>
+                <ion-toggle slot="end" class="px-0 mx-0" id="themeToggle"></ion-toggle>
+              </ion-item>
+            </ion-list>
+
+
+          </div>
+        </ion-accordion>
+        
         <ion-item [disabled]="true" color="tertiary">Share Feedback
           <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
         </ion-item>
