--- a/mobile/RackApp/src/app/pages/details/details.page.html
+++ b/mobile/RackApp/src/app/pages/details/details.page.html
@@ -24,7 +24,7 @@
         <ion-label>User_id</ion-label>
         <ion-input placeholder="" formControlName="User_id"></ion-input>
       </ion-item> -->
-      <ion-item>
+      <ion-item class="input-fs">
         <ion-label>When's your birthday?</ion-label>
         <ion-input class="text-end" type="date" formControlName="Birthday"></ion-input>
         <!-- <ion-input formControlName="Birthday" required><ion-datetime-button datetime="datetime"
