--- a/mobile/RackApp/src/app/tab1/tab1.page.html
+++ b/mobile/RackApp/src/app/tab1/tab1.page.html
@@ -4,7 +4,7 @@
   <br>
   <br>
   <h2 class="greeting title-theme color-main" *ngFor="let user of userDetails">{{greeting}}, {{ user.FirstName }}!</h2>
-  <h5 class="quote">"Another day, another outfit!"</h5>
+  <h5 class="quote">{{inspoStr}}</h5>
   <br>
   <ion-grid>
     <ion-row>
