--- a/mobile/RackApp/src/app/components/forecast/forecast.component.html
+++ b/mobile/RackApp/src/app/components/forecast/forecast.component.html
@@ -13,6 +13,6 @@
   <br>
 <h2 class="title-theme">Coming Soon!</h2>
 <br>
-<ion-icon name="construct-outline" class="icon-lg" color="medium"></ion-icon>
+<ion-icon name="construct" class="icon-lg" color="primary"></ion-icon>
 </ion-content>
 
